@@ -1,13 +1,13 @@
 =begin
 == NAME
 tDiary: the "tsukkomi-able" web diary system.
-tdiary.rb $Revision: 1.246 $
+tdiary.rb $Revision: 1.247 $
 
 Copyright (C) 2001-2005, TADA Tadashi <sho@spc.gr.jp>
 You can redistribute it and/or modify it under GPL2.
 =end
 
-TDIARY_VERSION = '2.1.2.20050912'
+TDIARY_VERSION = '2.1.2.20050916'
 
 require 'cgi'
 require 'uri'
@@ -831,6 +831,14 @@ module TDiary
 		def conf_label( key )
 			label, = @conf_procs[key]
 			label
+		end
+
+		def conf_current_style( key )
+			if key == @cgi.params['conf'][0] then
+				' class="current"'
+			else
+				''
+			end
 		end
 
 		def add_cookie( cookie )
