@@ -1,6 +1,6 @@
 @charset "euc-jp";
 /*
-conf.css: style sheet of tDiary preferences page. $Revision: 1.4 $
+conf.css: style sheet of tDiary preferences page. $Revision: 1.5 $
 Copyright (C) 2005 TADA Tadashi <sho@spc.gr.jp>
 You can redistribute it and/or modify it under GPL2.
 */
@@ -176,10 +176,11 @@ div.sidebar ul {
 }
 
 div.sidebar li {
+	margin-bottom: 0.2em;
 }
 
-div.sidebar li {
-	margin-bottom: 0.2em;
+div.sidebar li.current {
+	background-color: #32c832;
 }
 
 img#theme_thumbnail {
